ci-artifacts/safe-shutdown-apply.log
  File "/home/runner/work/retrodesk/retrodesk/tools/materialize_safe_global_shutdown.py", line 97
    "    state->force_close = true;
    ^
SyntaxError: unterminated string literal (detected at line 97)
